ci-cd-pipeline-project/infrastructure/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ci-cd-app-service
  labels:
    app: ci-cd-app
spec:
  selector:
    app: ci-cd-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
